@@ -1,5 +1,6 @@
 Version 1.0pre1 -- DEVELOPMENT
 ------------------------------
+- added config option to set IMAP folder delimiter rather than always detecting it
 - Made session cookie parameter use PHP's settings rather than making assumptions
 - Select/Deslect all implemented using only HTML (not Javascript)
 - Fixed default charset that is sent with outbound messages (now user's preferred charset)
